# Haws

./: .gitignore  .project  README  README.md  haws.cabal  index.html  params.json
ldom/: index.html
papers/: RDF.hs  RDFUtils.hs  Sets.hs  Typing.hs  ldom.hs  namespaces.hs  paper.hs  paper_vars.hs  rse_negations.hs  scp14.bib  shacl.hs  testLDOM.hs  testShacl.hs
shacl/: index.html
src/: Main.hs
src/Haws/: FGLTGraph.hs  FunTGraph.hs  GraphAlgorithms.hs  RDFGraph.hs  ShEx.hs  Subst.hs  TContext.hs  TGraph.hs  TestingExamples.hs  Unify.hs
src/Haws/Conversions/: Graph2TGraph.hs
src/Haws/ESWC_Paper/: paper.hs  paper2.hs
src/Haws/Monads/: BT.lhs  BackMonad.lhs  Laws.lhs  MonadT.lhs
src/Haws/ShEx/: Context.hs  IssueExample.hs  RDFModel.hs  Result.hs  Semantics.hs  Shape.hs  TestSemantics.hs  Typing.hs
tests/: MainTest.hs
tests/Haws/: TestFGLTGraph.hs  TestFunTGraph.hs  TestTGraph.hs
