name:           haws
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         labra

executable haws
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:    base >= 4,
                   fgl,
                   containers
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Haws.RDFGraph,
                   Haws.TGraph,
                   Haws.FGLTGraph,
                   Haws.FunTGraph

test-suite Test
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  hs-source-dirs:  
                   src, tests,
                   src/Haws,
                   tests/Haws
  main-is:        MainTest.hs